- 'eq slots' displays list of slotnames
  'eq slotname item' will try to equip item in slotname
- Fractional weight in inventory is now displayed.
- Show proper SP for all skills (auto-detected).
- Improved storage list, sorts the items by category like the real client.
- Emotion command now uses the real commands from the RO client.
  Example: e thx
- _whenWater should work now?

New commands:
- getplayerinfo (number)
  Ask the server for the name of the object with that ID. You will not
  see the reply unless you have debug level 2.
- storage addfromcart <cart_item> [<amount>]
  storage gettocart <storage_item> [<amount>]
  Support for adding/getting items directly to/from merchant cart
- whoami
  Displays your character and account ID.


New config options:
- partySkill: target_dist (range)
  This is the same as target_dist for attackSkillSlot.
  Only use the skill if the player is in the given range.
- partySkill: isSelfSkill (flag)
  Use this skill on yourself after checking the party conditions.
  Useful for Magnificat or Gloria.
- cachePlayerNames (flag)
    Turns player name caching on or off.

  cachePlayerNames_duration (seconds)
    Cache player names for a maximum time of (seconds). The default is
    900 seconds (15 minutes).

  cachePlayerNames_maxSize (number)
    Maximum cache size. The default is 100.
- storageAuto_keepOpen (flag)
  Set to true if you want to keep storage open after storageAuto sequence.
  Only enable this if you know what you're doing.
  (Note: You cannot use items while storage is open.)
- itemsTakeAuto_new (flag)
  Activates experimental new item taking code; might work better for
  archers who keep failing to take items.
- "s" sequence for NPC talk steps; the client sends this when you click
  "Sell" at a shop NPC.
- attackLooters (flag)
  Enables Looter attack. (Warning attacks all monsters.).
  Will only attack if item_pickup is not 0
- teleportAuto_dropTargetKS (flag)